...



    <!-- layout screen default login -->
    <string name="strLyLoginHintInputEmail">Email</string>
    <string name="strLyLoginHintInputPassword">Password</string>
    <string name="strLyLoginButtonLogin">Login</string>
    <string name="strLyLoginTextViewAccount">Cadastre-se aqui!</string>

    <string name="strLyLoginUserNameError">Entre com o nome do usuário</string>
    <string name="strLyLoginPassWordError">Entre com a senha do usuário</string>
    <string name="strLyLoginloginfailed">Falha no login</string>
    <string name="strLyLoginUsername_error">Falha no nome</string>
...
